--- a/app/globals.css
+++ b/app/globals.css
@@ -2,38 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
+  html,body {
+    background-color: #ffffff;
+    color: #000000;
+  }
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
 
+
 html {
   scroll-behavior: smooth;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-}
-
-.about-container {
-  max-width: 1280px;
-  margin: 0 auto;
-  display: grid;
-  gap: 4rem;
-  padding: 2rem 1rem;
-}
-.about-content {
-  text-align: center;
-  max-width: 800px;
-  margin: 0 auto;
 }
 
 
@@ -78,11 +61,6 @@ body {
   border-radius: 0.25rem;
 }
 
-.highlight-text {
-  color: #4b5563;
-  font-weight: 500;
-}
-
 .contact-us-heading {
   position: relative;
   display: inline-block;
@@ -98,23 +76,6 @@ body {
   height: 3px;
   background: #4b5563;
 }
-
-/*** Services Start ***/
-
-.services .services-item {
-  transition: 0.5s;
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
-}
-
-
-
-
-
-
-/*** Services End ***/
 
 
 .about-section {
