--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ html {
   position: relative;
   background: #fff;
   padding: 1rem;
-  width: 400px;
+  max-width: 400px;
   height: 400px;
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1);
   border-radius: 0.5rem;
@@ -82,6 +82,7 @@ html {
   background: linear-gradient(to bottom, #f9fafb, #f3f4f6);
   padding: 6rem 1rem;
   min-height: 100vh;
+  position: relative;
 }
 .about-container {
   max-width: 1280px;
